# mars_map

./: .gitignore  Doxyfile  README.md  meson.build  premake5.lua  world.py
assets/shader/: world.frag  world.vert
script/: shell.nix
src/: main.c
src/core/: mars_map.c  mars_map.h
src/entity/: camera.c  camera.h
src/event/: input.c  input.h
src/math/: matrix4.c  matrix4.h  vector2.c  vector2.h  vector3.c  vector3.h
src/render/: array.c  array.h  buffer.c  buffer.h  shader.c  shader.h  window.c  window.h
src/world/: chunk.c  chunk.h  world.c  world.h
